# mersys_dev

./: .gitignore  bag2img.py  build.sh  clean.sh  colive+fastlio.sh  colive+fastlio_multi.sh  colive+fastlio_multi_uestc.sh  colive+vins.sh  dataset.sh  dataset_cut.sh  fastlio.sh  fastlio_mid70.sh  livox_camera_calib.sh  livox_camera_calib3.sh  mersys+fastlio.sh  mersys+fastlio_multi.sh  mersys+vins.sh  mlcc.sh  note.md  path.py  quickbuild.sh  r3live.sh  service_call.sh  vins.sh  workspace.code-workspace
backend/: CMakeLists.txt  package.xml
backend/config/: config_comm.yaml
backend/launch/: colive_test.launch
backend/src/base/: print_enhancement.hpp  typedefs_base.hpp  value_redefine.hpp
backend/src/communicator/: communicator_base.cpp  communicator_base.hpp  config_comm.cpp  config_comm.hpp
backend/src/communicator/client/: communicator_client.cpp  communicator_client.hpp  pointcloud_ex.cpp  pointcloud_ex.hpp
backend/src/communicator/msgs/: msg_landmark.cpp  msg_odometry.cpp  msg_pointcloud.cpp  msg_pointcloud.hpp  msg_test.cpp  msg_test.hpp
backend/src/communicator/server/: communicator_server.cpp  communicator_server.hpp
backend/src/core/: backend.cpp  backend.hpp  backend_node.cpp  config_backend.hpp  sb.cpp  sb.hpp
backend/src/map/: map.hpp  map_base.cpp  map_base.hpp  map_co.cpp  map_co.hpp  map_liv.cpp  map_liv.hpp  mapmanager.cpp  mapmanager.hpp  rgb_map.cpp  rgb_map.hpp
backend/src/map/frames/: pointcloud_ex.cpp  pointcloud_ex.hpp
backend/src/map/image/: rgb_map.hpp
backend/src/map/kd_tree/: ikd_Tree.cpp  ikd_Tree.h
backend/src/test/: test_client.cpp  test_client.hpp  test_node.cpp
backend/src/visualizer/: visualizer_be.hpp
colive_backend/: CMakeLists copy 2.txt  CMakeLists copy 3.txt  CMakeLists copy 4.txt  CMakeLists copy 5.txt  CMakeLists copy 6.txt  CMakeLists copy.txt  CMakeLists.txt  package.xml
colive_backend/config/: config_backend.yaml
colive_backend/launch/: colive_backend.launch  dataset.launch  rviz.launch
colive_backend/rviz_cfg/: loam_livox.rviz
colive_backend/src/base/: print_enhancement.hpp  typedefs_base.hpp
colive_backend/src/communicator/: communicator_base.cpp  communicator_base.hpp  config_comm.hpp
colive_backend/src/communicator/client/: communicator_client.cpp  communicator_client.hpp  enable_client.hpp
colive_backend/src/communicator/msgs/: msg_define.hpp  msg_device_info.cpp  msg_device_info.hpp  msg_ex.cpp  msg_ex.hpp  msg_image.cpp  msg_image.hpp  msg_instruction.cpp  msg_instruction.hpp  msg_keyframe.cpp  msg_keyframe.hpp  msg_landmark.hpp  msg_odometry.hpp  msg_pointcloud.cpp  msg_pointcloud.hpp
colive_backend/src/communicator/msgs copy/: msg_pointcloud.cpp  msg_pointcloud.hpp  msg_test.cpp
colive_backend/src/communicator/server/: communicator_server.cpp  communicator_server.hpp
colive_backend/src/core/: backend.cpp  backend.hpp  backend_node.cpp  config_backend.cpp  config_backend.hpp  httplib.h  service_manager.cpp  service_manager.hpp
colive_backend/src/map/: map_co.cpp  map_co.hpp  map_rgb.cpp  map_rgb.hpp  mapmanager.cpp  mapmanager.hpp
colive_backend/src/map/frames/: camera_frame.cpp  camera_frame.hpp  device_info.hpp  frame_base.cpp  frame_base.hpp  image_ex.cpp  image_ex.hpp  instruction.cpp  instruction.hpp  loop_info.cpp  loop_info.hpp  pointcloud_ex.cpp  pointcloud_ex.hpp
colive_backend/src/place_rec/: livox_cam_calib.cpp  livox_cam_calib.hpp  place_rec.cpp  place_rec.hpp
colive_backend/src/place_rec/livox_camera_calib/: CMakeLists.txt
colive_backend/src/place_rec/scancontext/: KDTreeVectorOfVectorsAdaptor copy 2.h  Scancontext.cpp  Scancontext.h
colive_backend/src/test/: test_client.cpp  test_client.hpp  test_node.cpp
colive_backend/src/tools/: test_timer.cpp  tools_color_printf.hpp  tools_errorif.hpp  tools_serialization_cereal.hpp
colive_backend/src/useless/: msg_keyframe.hpp  msg_test.hpp
colive_backend/src/visualizer/: visualizer_be.cpp  visualizer_be.hpp
colive_backend/test/: CMakeLists.txt
colive_backend/test/comm/src/: Acceptor.cpp  Connection.cpp
colive_backend/test/gtsam/: CMakeLists.txt
colive_backend/test/gtsam/src/: main.cpp
colive_backend/test/quic/: CMakeLists.txt
colive_backend/test/quic/quic_libs/: libmsquic.so.2
mersys_backend/: CMakeLists.txt  package.xml
mersys_backend/config/: config_backend.yaml  config_comm.yaml
mersys_backend/launch/: colive_backend.launch  colive_test.launch  dataset.launch  rviz.launch
mersys_backend/rviz_cfg/: loam_livox.rviz  loam_livox（复件）.rviz
mersys_backend/src/base/: typedefs_base.hpp
mersys_backend/src/communicator/: communicator_base.cpp  communicator_base.hpp  config_comm.cpp  config_comm.hpp
mersys_backend/src/communicator/client/: communicator_client.cpp  communicator_client.hpp  enable_client.hpp
mersys_backend/src/communicator/msgs/: msg_define.hpp  msg_device_info.cpp  msg_device_info.hpp  msg_image.cpp  msg_image.hpp  msg_instruction.cpp  msg_instruction.hpp  msg_pointcloud.cpp  msg_pointcloud.hpp
mersys_backend/src/communicator/server/: communicator_server.cpp  communicator_server.hpp
mersys_backend/src/core/: backend.cpp  backend.hpp  backend_node.cpp  config_backend.cpp  config_backend.hpp  service_manager.cpp  service_manager.hpp
mersys_backend/src/map/: map_co.cpp  map_co.hpp  map_rgb.cpp  map_rgb.hpp  mapmanager.cpp  mapmanager.hpp
mersys_backend/src/map/frames/: all_frame_ex.hpp  device_info.cpp  (+11 more)
mersys_backend/src/place_rec/: livox_cam_calib.cpp  livox_cam_calib.hpp  place_rec.cpp  place_rec.hpp
mersys_backend/src/test/: test_client.cpp  test_client.hpp  test_node.cpp
mersys_backend/src/tools/: common_tools.h  test_timer.cpp  tools_isometry.hpp  tools_pointcloud.hpp  tools_read_parm.hpp  tools_serialization_cereal.hpp
mersys_backend/src/useless/: msg_keyframe.cpp  msg_keyframe.hpp  msg_landmark.cpp  msg_landmark.hpp  msg_odometry.cpp  msg_odometry.hpp  msg_test.cpp  msg_test.hpp
mersys_backend/src/visualizer/: visualizer_be.cpp  visualizer_be.hpp
mersys_backend/test/comm/: CMakeLists.txt
mersys_backend/test/quic/: CMakeLists.txt  server.cert  server.key
(+124 files in other folders)
