<?xml version="1.0"?>
<package>
  <name>mersys_backend</name>
  <version>1.0.0</version>
  <description>1</description>
  <maintainer email="1@gmail.com">1</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <!-- <build_depend>livox_ros_driver</build_depend> -->

  <run_depend>catkin</run_depend>
  <run_depend>roscpp</run_depend>
  <!-- <run_depend>livox_ros_driver</run_depend> -->
 <!-- <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lmersys_backend"/>
  </export> -->
</package>
